--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,61 @@ h1,h2,h3,h4,h5,h6 {
 a {
     text-decoration: none;
 }
+
+
+/* footer */
+footer {
+    flex: 0 0 auto;
+    min-height: 120px;
+    padding: 16px 0;
+    background: white;
+    color: rgba(0,0,0,.65);
+    line-height: 50px;
+    text-align: center;
+    font-size: 14px;
+    letter-spacing: 1px;
+    margin: 0 !important;
+    margin-top: 20px;
+}
+footer p {
+    line-height: 1.7em;
+}
+footer a {
+    color: deeppink;
+}
+footer > div > div {
+    height: 100px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+#yy520 {
+    width: 100%;
+    text-align: center;
+    line-height: 1.5em;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+    padding: 0 12px;
+}
+.pjax-load {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999999;
+    background-color: rgba(0,0,0,.15);
+    flex-direction: column;
+    display: none;
+    align-items: center;
+    justify-content: center;
+}.pjax-load > img {
+    width: 115px;
+     border: 4px solid white;
+    border-radius: 10px;
+ }
+
 /* alluse */
 .shadow-1 {
     box-shadow: 0 1px 1px rgba(0,0,0,.22);
@@ -45,6 +100,17 @@ a {
 
 body {
     padding-top: 80px;
+}
+body,html {height: 100%}
+#body {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+#body > .mdui-container:first-child , .mdui-container-fluid:first-child {
+    flex: 1 0 auto;
+    color: gray;
+    margin: 0 !important;
 }
 /* header */
 header {
@@ -91,7 +157,9 @@ header {
     float: right;
 }
 .blogBody {
+    flex: 1 0 auto;
     color: gray;
+    margin: 0 !important;
     margin-bottom: 50px;
     position: relative;
     overflow: hidden;
@@ -467,40 +535,6 @@ header {
            }.nextNewPageData > i {
     font-size: 16px;
                        }
-
-
-/* footer */
-footer {
-    min-height: 120px;
-    padding: 16px 0;
-    background: white;
-    color: rgba(0,0,0,.65);
-    line-height: 50px;
-    text-align: center;
-    font-size: 14px;
-    letter-spacing: 1px;
-}
-footer p {
-    line-height: 1.7em;
-}
-footer a {
-    color: deeppink;
-}
-footer > div > div {
-    height: 100px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-}
-#yy520 {
-    width: 100%;
-    text-align: center;
-    line-height: 1.5em;
-    margin-bottom: 10px;
-    box-sizing: border-box;
-    padding: 0 12px;
-}
 
 /* PAGE */
 .pageBody {
